--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,60 +1,128 @@
 *{
-    transition: all 0.2s;
+    transition: all 0.25s;
+    box-sizing: border-box;
 }
-div.employees{
-    width: 100%;   height: 100%;
-    position: relative;
-    display: flex;  flex-direction: column;     justify-content: flex-start;
-    align-items: center;
-    /* background-color: rgb(0, 245, 245); */
-    overflow-y: scroll;
-}
-
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
 }
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
+    background: #d9d9d9;
 }
 
 ::-webkit-scrollbar-thumb {
     background: #888;
+    /* background: #ff2300; */
+    background: #d67a58;
+    opacity: 0.4;
+    border-radius: 2px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+    background: #e04811;
+    opacity: 1;
 }
-div.employeesLabel{
-    width: 50%;    height: 75px;
-    display: flex; flex-direction: column;
+div.employeesList:hover ::-webkit-scrollbar-thumb {
+    background: #555;
+    background: #e04811;
+    opacity: 1;
+}
+div.employeesWorkspace{
+    max-width: 100%;   height: 100%;
+    /* max-width: 100%;    max-height: 100%; */
+    position: relative;
+    display: flex;  flex-direction: column;     justify-content: flex-start; align-content: center;
+    align-items: center;
+}
+div.employeesHeader{
+    width: 100%;    height: 40px;
+    display: flex; flex-direction: row;
     text-align: center; vertical-align: middle; align-self: center; align-content: center;
     background-color: rgba(6, 50, 116,1);
+    background-color: #242726;  font-weight: 100;
 }
 span.employeesLabel{
     color: honeydew;
+    opacity: 0.8;
     margin: auto;
-    border: 0.5px solid RGBA(6, 50, 116,1);
+    display: flex;  flex-direction: row;
+    /* border: 0.5px solid RGBA(6, 50, 116,1); */
     text-align: center; vertical-align: middle; align-self: center; align-content: center;
     font-size: x-large;
 }
-div.employee{
-    width: 50%;    height: 50px;
-    /* background-color: RGBA(200,200,200,1); */
-    /* background-color: #f7eb47; */
+div.employeesBody{
+    width: 100%;    height: calc(100% - 40px);
+    background-color: rgb(245, 245, 245);
+    background-color: #2c2f2e;
     display: flex;  flex-direction: row;
-    border-bottom: 1px solid RGBA(200,200,200,1);
 }
-div.employee:hover{
-    width: 50%;    height: 50px;
+div.employeesList{
+    width: 25%;   max-height: 100%;
+    display: flex;  flex-direction: column;
+    /* flex-wrap: wrap; */
+    justify-content: flex-start;
+    overflow-x: hidden;
+    /* padding: 20px; */
+    background-color: rgb(245, 245, 245);
+    background-color: #c5c1c0;
+    background-color: #d9d9d9;
+}
+div.employee{
+    width: 100%;    height: 75px;
+    background-color: #c5c1c0;
+    opacity: 0.7;
+    cursor: pointer;
+    display: flex;  flex-direction: row;
+}
+div.employee:hover, div.employee.active{
+    opacity: 1;
+    height: 100px;
+    background-color: #2c2f2e;
     /* background-color: RGBA(40,140,200,1); */
     /* background-color: RGBA(32,32,32,1); */
 }
-span.newEmployeeIcon{
+div.employee:hover span.employeeName, div.employee:hover span.employeeEmail, div.employee.active span.employeeName, div.employee.active span.employeeEmail{
+    color: honeydew;
+}
+span.employeePhoto{
+    width: 25%; height: 100%;
+    display: inline-block;
+    /* border-right: 1px solid blue; */
+    background-image: url('./../../assets/username.png');
+    background-position: center;    background-repeat: no-repeat;   
+    background-size: 30px;
+}
+div.employeeDetails{
+    width: 75%; height: 75px;
+    display: flex;  flex-direction: column; justify-content: space-around;  align-items: center;    align-content: center;
+}
+div.employee:hover div.employeeDetails, div.employee.active div.employeeDetails{
+    width: 75%; height: 100px;
+}
+span.employeeName, span.employeeEmail{
+    width: 100%;
+    vertical-align: middle;
+    align-self: center; align-content: center;
+}
+
+/* span.newEmployeeIcon{
     width: 30px;    height: 30px;
     background-image: url('./../../assets/icons8-plus-100-1.png');
     background-position: center;    background-repeat: no-repeat;   background-size: 30px;
     cursor: pointer;    margin-top: 25px; margin-bottom: 25px;  opacity: 0.7;  
-      /* margin-bottom: 50px; */
+} */
+span.newEmployeeIcon{
+    width: 40px;    height: 40px;
+    mask: url('./../../assets/add_1.svg');    background: honeydew;
+    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    mask-size: 25px;    mask-repeat: no-repeat;
+    cursor: pointer;    margin-top: 10px;
+}
+span.newEmployeeIcon:hover{
+    background:#e04811;
+    background:#f7eb47
+    /* background: yellow; */
 }
 span.newEmployeeIcon:hover, span.incIcon:hover{
     opacity: 1;
@@ -94,4 +162,9 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
+}
+
+div.employeeProfile{
+    width: 100%;    height: 100%;
+    position: relative;
 }
