--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -16,10 +16,10 @@
 
 <div class='employeesWorkspace'>
     <!-- <div class='employee' *ngFor='let employee of allemployees'>{{ employee.employee_name }}</div> -->
-  <div class='employeesHeader'>
+  <!-- <div class='employeesHeader'>
     <span class='employeesLabel'>TEAM</span>
     <span class='newEmployeeIcon' (click)='addNewemployee()'></span>
-  </div>
+  </div> -->
   <div class='employeesBody'>
 
     <div class='employeesList' [class.active]='activeEmployeeFlag'>
