--- a/src/app/employee-profile/employee-profile.component.html
+++ b/src/app/employee-profile/employee-profile.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <hr>
-  <div class="projectProfile">
+  <!-- <div class="projectProfile">
     <ngx-charts-bar-vertical
       [view]="view"
       [scheme]="colorScheme"
@@ -34,5 +34,5 @@
       [showGridLines]="showGridLines"
       (select)="onSelect($event)">
     </ngx-charts-bar-vertical>
-  </div>
+  </div> -->
 </div>
