--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -52,13 +52,15 @@ span.employeesLabel{
     font-size: x-large;
 }
 div.employeesBody{
-    width: 100%;    height: calc(100% - 40px);
+    width: 100%;
+    /* height: calc(100% - 40px); */
+    height: 100%;
     background-color: rgb(245, 245, 245);
     background-color: #2c2f2e;
     display: flex;  flex-direction: row;
 }
 div.employeesList{
-    width: 25%;   max-height: 100%;
+    min-width: 25%;   max-height: 100%;
     display: flex;  flex-direction: column;
     /* flex-wrap: wrap; */
     justify-content: flex-start;
@@ -67,6 +69,7 @@ div.employeesList{
     background-color: rgb(245, 245, 245);
     background-color: #c5c1c0;
     background-color: #d9d9d9;
+    /* background-color: rgba(100,100,100,1); */
 }
 div.employee{
     width: 100%;    height: 75px;
@@ -77,7 +80,7 @@ div.employee{
 }
 div.employee:hover, div.employee.active{
     opacity: 1;
-    height: 100px;
+    /* height: 100px; */
     background-color: #2c2f2e;
     /* background-color: RGBA(40,140,200,1); */
     /* background-color: RGBA(32,32,32,1); */
@@ -98,7 +101,7 @@ div.employeeDetails{
     display: flex;  flex-direction: column; justify-content: space-around;  align-items: center;    align-content: center;
 }
 div.employee:hover div.employeeDetails, div.employee.active div.employeeDetails{
-    width: 75%; height: 100px;
+    /* width: 75%; height: 100px; */
 }
 span.employeeName, span.employeeEmail{
     width: 100%;
